tests/negative/test_sizeof_undef_fixed.orb
data Foo;

fixed Bar Foo;

fnc main () () {
    sizeOf Bar;
};